improvements of exported docs