@@ -3,6 +3,8 @@ package com.church.programgenerator.controller;
 import java.io.IOException;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
+import java.util.Collections;
+import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpHeaders;
@@ -18,6 +20,7 @@ import org.springframework.web.bind.annotation.RequestParam;
 
 import com.church.programgenerator.model.SacramentProgram;
 import com.church.programgenerator.model.Speaker;
+import com.church.programgenerator.service.ConductorService;
 import com.church.programgenerator.service.FileStorageService;
 import com.church.programgenerator.service.ProgramStorageService;
 import com.church.programgenerator.service.SacramentProgramDocumentService;
@@ -29,105 +32,77 @@ public class SacramentController {
 
     @Autowired
     private SacramentProgramDocumentService documentService;
-    
+
     @Autowired
     private SacramentProgramPreviewService previewService;
-    
+
     @Autowired
     private FileStorageService fileStorageService;
 
     @Autowired
     private ProgramStorageService programStorageService;
 
+    @Autowired
+    private ConductorService conductorService;
+
     @GetMapping
     public String sacramentProgram(Model model) {
         model.addAttribute("pageTitle", "Sacrament Meeting Program");
         model.addAttribute("sacramentProgram", new SacramentProgram());
+        model.addAttribute("conductors", conductorService.getAll());
+        model.addAttribute("speakerNames", Collections.emptyList());
+        model.addAttribute("speakerTitles", Collections.emptyList());
         return "sacrament";
     }
-    
+
     @PostMapping("/edit")
     public String editProgram(@ModelAttribute SacramentProgram program,
-                             @RequestParam("speaker1Name") String speaker1Name,
-                             @RequestParam("speaker2Name") String speaker2Name,
-                             @RequestParam("speaker3Name") String speaker3Name,
-                             @RequestParam("speaker4Name") String speaker4Name,
-                             @RequestParam("speaker1Title") String speaker1Title,
-                             @RequestParam("speaker2Title") String speaker2Title,
-                             @RequestParam("speaker3Title") String speaker3Title,
-                             @RequestParam("speaker4Title") String speaker4Title,
-                             @RequestParam(name = "speakersAuxiliary", required = false) String speakersAuxiliary,
-                             @RequestParam(name = "announcements", required = false) String announcements,
-                             Model model) {
-        
-        // Process speakers using existing method
-        addSpeakersToProgram(program, speaker1Name, speaker2Name, speaker3Name, speaker4Name,
-                           speaker1Title, speaker2Title, speaker3Title, speaker4Title);
-        
-        // Set speakers auxiliary
-        program.setSpeakersAuxiliary(speakersAuxiliary);
-        
-        // Process announcements using existing method
-        processAnnouncements(program, announcements);
-        
-        model.addAttribute("pageTitle", "Sacrament Meeting Program");
-        model.addAttribute("sacramentProgram", program);
-        model.addAttribute("speaker1Name", speaker1Name);
-        model.addAttribute("speaker2Name", speaker2Name);
-        model.addAttribute("speaker3Name", speaker3Name);
-        model.addAttribute("speaker4Name", speaker4Name);
-        model.addAttribute("speaker1Title", speaker1Title);
-        model.addAttribute("speaker2Title", speaker2Title);
-        model.addAttribute("speaker3Title", speaker3Title);
-        model.addAttribute("speaker4Title", speaker4Title);
-        model.addAttribute("speakersAuxiliary", speakersAuxiliary);
-        model.addAttribute("announcementsText", announcements);
-        
-        return "sacrament";
-    }
-    
-    @PostMapping("/preview")
-    public String previewProgram(@ModelAttribute SacramentProgram program,
-                                @RequestParam("speaker1Name") String speaker1Name,
-                                @RequestParam("speaker2Name") String speaker2Name,
-                                @RequestParam("speaker3Name") String speaker3Name,
-                                @RequestParam("speaker4Name") String speaker4Name,
-                                @RequestParam("speaker1Title") String speaker1Title,
-                                @RequestParam("speaker2Title") String speaker2Title,
-                                @RequestParam("speaker3Title") String speaker3Title,
-                                @RequestParam("speaker4Title") String speaker4Title,
-                                @RequestParam(name = "speakersAuxiliary", required = false) String speakersAuxiliary,
-                                @RequestParam(value = "announcements", required = false) String announcements,
-                                Model model) {
-        
-        // Process announcements
-        if (announcements != null && !announcements.trim().isEmpty()) {
+                              @RequestParam(value = "speakerNames", required = false) List<String> speakerNames,
+                              @RequestParam(value = "speakerTitles", required = false) List<String> speakerTitles,
+                              @RequestParam(name = "speakersAuxiliary", required = false) String speakersAuxiliary,
+                              @RequestParam(name = "announcements", required = false) String announcements,
+                              Model model) {
+
+        if (announcements != null && !announcements.isBlank()) {
             processAnnouncements(program, announcements);
         }
-        
-        // Process speakers
-        addSpeakersToProgram(program, speaker1Name, speaker2Name, speaker3Name, speaker4Name,
-                           speaker1Title, speaker2Title, speaker3Title, speaker4Title);
-        
-        // Set speakers auxiliary
+        addSpeakersToProgram(program, speakerNames, speakerTitles);
         program.setSpeakersAuxiliary(speakersAuxiliary);
-        
-        // Generate preview HTML
-        String previewHtml = previewService.generateHtmlPreview(program);
-        
-        model.addAttribute("previewHtml", previewHtml);
+
+        model.addAttribute("pageTitle", "Sacrament Meeting Program");
         model.addAttribute("sacramentProgram", program);
-        model.addAttribute("speaker1Name", speaker1Name);
-        model.addAttribute("speaker2Name", speaker2Name);
-        model.addAttribute("speaker3Name", speaker3Name);
-        model.addAttribute("speaker4Name", speaker4Name);
-        model.addAttribute("speaker1Title", speaker1Title);
-        model.addAttribute("speaker2Title", speaker2Title);
-        model.addAttribute("speaker3Title", speaker3Title);
-        model.addAttribute("speaker4Title", speaker4Title);
+        model.addAttribute("conductors", conductorService.getAll());
+        model.addAttribute("speakerNames", speakerNames != null ? speakerNames : Collections.emptyList());
+        model.addAttribute("speakerTitles", speakerTitles != null ? speakerTitles : Collections.emptyList());
         model.addAttribute("speakersAuxiliary", speakersAuxiliary);
         model.addAttribute("announcementsText", announcements);
-        
+
+        return "sacrament";
+    }
+
+    @PostMapping("/preview")
+    public String previewProgram(@ModelAttribute SacramentProgram program,
+                                 @RequestParam(value = "speakerNames", required = false) List<String> speakerNames,
+                                 @RequestParam(value = "speakerTitles", required = false) List<String> speakerTitles,
+                                 @RequestParam(name = "speakersAuxiliary", required = false) String speakersAuxiliary,
+                                 @RequestParam(value = "announcements", required = false) String announcements,
+                                 Model model) {
+
+        if (announcements != null && !announcements.isBlank()) {
+            processAnnouncements(program, announcements);
+        }
+        addSpeakersToProgram(program, speakerNames, speakerTitles);
+        program.setSpeakersAuxiliary(speakersAuxiliary);
+
+        String previewHtml = previewService.generateHtmlPreview(program);
+
+        model.addAttribute("previewHtml", previewHtml);
+        model.addAttribute("sacramentProgram", program);
+        model.addAttribute("speakerNames", speakerNames != null ? speakerNames : Collections.emptyList());
+        model.addAttribute("speakerTitles", speakerTitles != null ? speakerTitles : Collections.emptyList());
+        model.addAttribute("speakersAuxiliary", speakersAuxiliary);
+        model.addAttribute("announcementsText", announcements);
+
         return "sacrament-preview";
     }
 
@@ -139,7 +114,7 @@ public class SacramentController {
         program.setDate(LocalDate.of(2026, 4, 12));
         program.setPresiding("Bishop Sherwin Tan");
         program.setConducting("(2nd Co) Bro. Joenice Gaco");
-        program.setAcknowledgement("(2nd Co) Bro. Jonathan OrdillasBro. Adrian Matro (Wrd Clrk), Johanne Perlas (Asst. Clrk. rec). Bro. Norman Oliva (Asst. Clrk. fin), (wrd exc. Secr.) John Russelle Domingo, (wrd exc. Asst. Secr.) Genesis Ferareza, To all Visitors and Stake Leaders (Welcome).");
+        program.setAcknowledgement("(2nd Co) Bro. Jonathan Ordillas, Bro. Adrian Matro (Wrd Clrk), Johanne Perlas (Asst. Clrk. rec). Bro. Norman Oliva (Asst. Clrk. fin), John Russelle Domingo, Genesis Ferareza, To all Visitors and Stake Leaders (Welcome).");
         program.setChorister("Sis. Kyle Domingo");
         program.setPianist("Bro. Oscar Driz");
         program.setOpeningHymn("#26 \"Joseph Smith's First Prayer\"");
@@ -154,186 +129,123 @@ public class SacramentController {
         String announcementsText = "Ongoing Sports (Invite to participate or watch and support our teams)\nApril 5 Easter Sunday";
         processAnnouncements(program, announcementsText);
 
-        String s1Name = "Lyka Villanueva";
-        String s2Name = "Myrna Driz";
-        String s3Name = "Meraluna Docabo";
-        String s4Name = "";
-        String s1Title = "Sis.";
-        String s2Title = "Sis.";
-        String s3Title = "Sis.";
-        String s4Title = "";
-
-        addSpeakersToProgram(program, s1Name, s2Name, s3Name, s4Name, s1Title, s2Title, s3Title, s4Title);
+        List<String> speakerNames = List.of("Lyka Villanueva", "Myrna Driz", "Meraluna Docabo");
+        List<String> speakerTitles = List.of("Sis.", "Sis.", "Sis.");
+        addSpeakersToProgram(program, speakerNames, speakerTitles);
 
         String previewHtml = previewService.generateHtmlPreview(program);
 
         model.addAttribute("previewHtml", previewHtml);
         model.addAttribute("sacramentProgram", program);
-        model.addAttribute("speaker1Name", s1Name);
-        model.addAttribute("speaker2Name", s2Name);
-        model.addAttribute("speaker3Name", s3Name);
-        model.addAttribute("speaker4Name", s4Name);
-        model.addAttribute("speaker1Title", s1Title);
-        model.addAttribute("speaker2Title", s2Title);
-        model.addAttribute("speaker3Title", s3Title);
-        model.addAttribute("speaker4Title", s4Title);
+        model.addAttribute("speakerNames", speakerNames);
+        model.addAttribute("speakerTitles", speakerTitles);
         model.addAttribute("speakersAuxiliary", "Relief Society");
         model.addAttribute("announcementsText", announcementsText);
 
         return "sacrament-preview";
     }
-    
+
     @PostMapping("/export/docx")
     public ResponseEntity<byte[]> exportDocx(@ModelAttribute SacramentProgram program,
-                                           @RequestParam("speaker1Name") String speaker1Name,
-                                           @RequestParam("speaker2Name") String speaker2Name,
-                                           @RequestParam("speaker3Name") String speaker3Name,
-                                           @RequestParam("speaker4Name") String speaker4Name,
-                                           @RequestParam("speaker1Title") String speaker1Title,
-                                           @RequestParam("speaker2Title") String speaker2Title,
-                                           @RequestParam("speaker3Title") String speaker3Title,
-                                           @RequestParam("speaker4Title") String speaker4Title,
-                                           @RequestParam(name = "speakersAuxiliary", required = false) String speakersAuxiliary,
-                                           @RequestParam(value = "announcements", required = false) String announcements) {
+                                             @RequestParam(value = "speakerNames", required = false) List<String> speakerNames,
+                                             @RequestParam(value = "speakerTitles", required = false) List<String> speakerTitles,
+                                             @RequestParam(name = "speakersAuxiliary", required = false) String speakersAuxiliary,
+                                             @RequestParam(value = "announcements", required = false) String announcements) {
         try {
-            // Process announcements
-            if (announcements != null && !announcements.trim().isEmpty()) {
+            if (announcements != null && !announcements.isBlank()) {
                 processAnnouncements(program, announcements);
             }
-            
-            // Process speakers
-            addSpeakersToProgram(program, speaker1Name, speaker2Name, speaker3Name, speaker4Name,
-                               speaker1Title, speaker2Title, speaker3Title, speaker4Title);
-            
-            // Set speakers auxiliary
+            addSpeakersToProgram(program, speakerNames, speakerTitles);
             program.setSpeakersAuxiliary(speakersAuxiliary);
-            
-            // Save to file system
-            String filePath = fileStorageService.saveDocxFile(program);
-            
-            // Auto-save to database
+
+            fileStorageService.saveDocxFile(program);
             try { programStorageService.saveSacramentProgram(program); } catch (Exception ignored) {}
 
-            // Also return for download
             byte[] documentBytes = fileStorageService.getDocxBytes(program);
             String filename = generateFilename(program, ".docx");
-            
+
             HttpHeaders headers = new HttpHeaders();
             headers.setContentType(MediaType.APPLICATION_OCTET_STREAM);
             headers.setContentDispositionFormData("attachment", filename);
-            
-            return ResponseEntity.ok()
-                    .headers(headers)
-                    .body(documentBytes);
-                    
+
+            return ResponseEntity.ok().headers(headers).body(documentBytes);
         } catch (IOException e) {
             return ResponseEntity.internalServerError().build();
         }
     }
-    
+
     @PostMapping("/export/pdf")
     public ResponseEntity<byte[]> exportPdf(@ModelAttribute SacramentProgram program,
-                                          @RequestParam("speaker1Name") String speaker1Name,
-                                          @RequestParam("speaker2Name") String speaker2Name,
-                                          @RequestParam("speaker3Name") String speaker3Name,
-                                          @RequestParam("speaker4Name") String speaker4Name,
-                                          @RequestParam("speaker1Title") String speaker1Title,
-                                          @RequestParam("speaker2Title") String speaker2Title,
-                                          @RequestParam("speaker3Title") String speaker3Title,
-                                          @RequestParam("speaker4Title") String speaker4Title,
-                                          @RequestParam(name = "speakersAuxiliary", required = false) String speakersAuxiliary,
-                                          @RequestParam(value = "announcements", required = false) String announcements) {
+                                            @RequestParam(value = "speakerNames", required = false) List<String> speakerNames,
+                                            @RequestParam(value = "speakerTitles", required = false) List<String> speakerTitles,
+                                            @RequestParam(name = "speakersAuxiliary", required = false) String speakersAuxiliary,
+                                            @RequestParam(value = "announcements", required = false) String announcements) {
         try {
-            // Process announcements
-            if (announcements != null && !announcements.trim().isEmpty()) {
+            if (announcements != null && !announcements.isBlank()) {
                 processAnnouncements(program, announcements);
             }
-            
-            // Process speakers
-            addSpeakersToProgram(program, speaker1Name, speaker2Name, speaker3Name, speaker4Name,
-                               speaker1Title, speaker2Title, speaker3Title, speaker4Title);
-            
-            // Set speakers auxiliary
+            addSpeakersToProgram(program, speakerNames, speakerTitles);
             program.setSpeakersAuxiliary(speakersAuxiliary);
-            
-            // Save to file system
-            String filePath = fileStorageService.savePdfFile(program);
 
-            // Auto-save to database
+            fileStorageService.savePdfFile(program);
             try { programStorageService.saveSacramentProgram(program); } catch (Exception ignored) {}
-            
-            // Also return for download
+
             byte[] pdfBytes = fileStorageService.getPdfBytes(program);
             String filename = generateFilename(program, ".pdf");
-            
+
             HttpHeaders headers = new HttpHeaders();
             headers.setContentType(MediaType.APPLICATION_PDF);
             headers.setContentDispositionFormData("attachment", filename);
-            
-            return ResponseEntity.ok()
-                    .headers(headers)
-                    .body(pdfBytes);
-                    
+
+            return ResponseEntity.ok().headers(headers).body(pdfBytes);
         } catch (IOException e) {
             return ResponseEntity.internalServerError().build();
         }
     }
-    
-    // Legacy endpoint for backward compatibility
+
+    /** Legacy endpoint — delegates to exportDocx */
     @PostMapping("/generate")
     public ResponseEntity<byte[]> generateProgram(@ModelAttribute SacramentProgram program,
-                                                  @RequestParam("speaker1Name") String speaker1Name,
-                                                  @RequestParam("speaker2Name") String speaker2Name,
-                                                  @RequestParam("speaker3Name") String speaker3Name,
-                                                  @RequestParam("speaker4Name") String speaker4Name,
-                                                  @RequestParam("speaker1Title") String speaker1Title,
-                                                  @RequestParam("speaker2Title") String speaker2Title,
-                                                  @RequestParam("speaker3Title") String speaker3Title,
-                                                  @RequestParam("speaker4Title") String speaker4Title,
+                                                  @RequestParam(value = "speakerNames", required = false) List<String> speakerNames,
+                                                  @RequestParam(value = "speakerTitles", required = false) List<String> speakerTitles,
                                                   @RequestParam(name = "speakersAuxiliary", required = false) String speakersAuxiliary,
                                                   @RequestParam(value = "announcements", required = false) String announcements) {
-        return exportDocx(program, speaker1Name, speaker2Name, speaker3Name, speaker4Name,
-                         speaker1Title, speaker2Title, speaker3Title, speaker4Title, speakersAuxiliary, announcements);
+        return exportDocx(program, speakerNames, speakerTitles, speakersAuxiliary, announcements);
     }
-    
-    private void addSpeakersToProgram(SacramentProgram program, String speaker1Name, String speaker2Name, 
-                                    String speaker3Name, String speaker4Name, String speaker1Title, 
-                                    String speaker2Title, String speaker3Title, String speaker4Title) {
-        if (speaker1Name != null && !speaker1Name.trim().isEmpty()) {
-            program.addSpeaker(new Speaker(1, speaker1Name.trim(), speaker1Title));
-        }
-        if (speaker2Name != null && !speaker2Name.trim().isEmpty()) {
-            program.addSpeaker(new Speaker(2, speaker2Name.trim(), speaker2Title));
-        }
-        if (speaker3Name != null && !speaker3Name.trim().isEmpty()) {
-            program.addSpeaker(new Speaker(3, speaker3Name.trim(), speaker3Title));
-        }
-        if (speaker4Name != null && !speaker4Name.trim().isEmpty()) {
-            program.addSpeaker(new Speaker(4, speaker4Name.trim(), speaker4Title));
+
+    // ── Helpers ───────────────────────────────────────────────────────────
+
+    private void addSpeakersToProgram(SacramentProgram program, List<String> names, List<String> titles) {
+        if (names == null || names.isEmpty()) return;
+        for (int i = 0; i < names.size(); i++) {
+            String name = names.get(i);
+            if (name != null && !name.isBlank()) {
+                String title = (titles != null && i < titles.size() && titles.get(i) != null)
+                        ? titles.get(i) : "";
+                program.addSpeaker(new Speaker(i + 1, name.trim(), title));
+            }
         }
     }
-    
+
     private String generateFilename(SacramentProgram program, String extension) {
-        return "sacrament" + 
-                (program.getDate() != null ? 
-                    program.getDate().format(DateTimeFormatter.ofPattern("yyyyMMdd")) : 
-                    LocalDate.now().format(DateTimeFormatter.ofPattern("yyyyMMdd"))) + 
+        return "sacrament" +
+                (program.getDate() != null
+                        ? program.getDate().format(DateTimeFormatter.ofPattern("yyyyMMdd"))
+                        : LocalDate.now().format(DateTimeFormatter.ofPattern("yyyyMMdd"))) +
                 extension;
     }
-    
+
     private void processAnnouncements(SacramentProgram program, String announcements) {
-        if (announcements != null && !announcements.trim().isEmpty()) {
-            // Clear existing announcements
+        if (announcements != null && !announcements.isBlank()) {
             program.getAnnouncements().clear();
-            
-            // Split by line breaks or commas and clean up
-            String[] announcementLines = announcements.split("[\\r\\n]+|,");
-            for (String line : announcementLines) {
-                String cleanLine = line.trim();
-                if (!cleanLine.isEmpty()) {
-                    program.addAnnouncement(cleanLine);
+            String[] lines = announcements.split("[\\r\\n]+|,");
+            for (String line : lines) {
+                String clean = line.trim();
+                if (!clean.isEmpty()) {
+                    program.addAnnouncement(clean);
                 }
             }
         }
     }
 }
+
